Ajustes en clarke

--- a/views/clarke.html
+++ b/views/clarke.html
@@ -8,12 +8,12 @@
 </head>
 <body style="background-image:url(https://image.freepik.com/foto-gratis/manzana-habitacion-sucia-pintura-patron_1203-5709.jpg)";>
     <h1>Clarke</h1>
-        <p><strong>Arthur Charles Clarke, más conocido como Arthur C. Clarke, fue un escritor y científico británico. <br> Autor de obras de divulgación científica y de ciencia ficción, como la novela 2001: Una odisea del espacio, El centinela o Cita con Rama y coguionista de la película 2001: Una odisea del espacio</strong></p>
-        <img src="/img/clarke.jpg" alt="">
+        <p><strong>Fue la única mujer que trabajó en el equipo del matemático Alan Turing en el proyecto Enigma, que desencriptó las comunicaciones secretas de la Alemania nazi.<br>Su papel en este proceso le valió premios y citaciones, como el nombramiento como miembro de la Orden del Imperio Británico, en 1946</strong></p>
+        <img src="/img/joanc1.jpg" alt="" width="200" height="300">
     <nav>
         <ul type="disc" >
-            <li><a href="https://es.wikipedia.org/wiki/Arthur_C._Clarke" target="_blank">Informacion Adicional</a></li>
-            <li><a href="https://www.google.com.ar/search?q=clarke+arthur&tbm=isch&ved=2ahUKEwi8oY2frv_wAhXzuZUCHZnLDFMQ2-cCegQIABAA&oq=clarke+arthur&gs_lcp=CgNpbWcQAzIGCAAQCBAeMgYIABAIEB4yBggAEAgQHjIGCAAQCBAeMgYIABAIEB4yBggAEAgQHjIGCAAQCBAeMgYIABAIEB4yBggAEAgQHjIGCAAQCBAeOgQIABBDOgcIABCxAxBDOgIIADoECAAQEzoICAAQBRAeEBNQhD1YpkJgoENoAHAAeACAAVCIAdMDkgEBN5gBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=ANa6YLyhB_Pz1sQPmZezmAU&bih=881&biw=1920" target="_blank">Mas imagenes</a></li>
+            <li><a href="https://es.wikipedia.org/wiki/Joan_Clarke" target="_blank">Informacion Adicional</a></li>
+            <li><a href="https://www.google.com.ar/search?q=joan+clarke&source=lnms&tbm=isch&sa=X&ved=2ahUKEwim8OCGyYTxAhVipZUCHXmBALcQ_AUoAXoECAEQAw&biw=1366&bih=625" target="_blank">Mas imagenes</a></li>
         </ul>
     </nav>
 </body>
