--- a/views/index.html
+++ b/views/index.html
@@ -12,20 +12,34 @@
         </video><br>
     <img src="/img/0efbb8115ec5e827982d77197867b37f.gif" alt=""><br>-->
     <img  src="/img/triangle_PNG30.png" width="400px" height="300px" >
+    <div>
+        <form action="../../form-result.php" target="_blank"></form>
     <nav>
-        <ul type = "square">
-            <li><a href="http://localhost:3030/babbage">Babbage</a></li>
-            <li><a href="http://localhost:3030/berners-lee">Berners lee</a></li>
-            <li><a href="http://localhost:3030/clarke">Clarke</a></li>
-            <li><a href="http://localhost:3030/hamilton">Hamilton</a></li>
-            <li><a href="http://localhost:3030/hopper">Hopper</a></li>
-            <li><a href="http://localhost:3030/lovelace">Lovelace</a></li>
-            <li><a href="http://localhost:3030/turing">Turing</a></li>
+         <ul type = "square">
+                <li><a href="http://localhost:3030/babbage">Babbage</a></li>
+                <li><a href="http://localhost:3030/berners-lee">Berners lee</a></li>
+                <li><a href="http://localhost:3030/clarke">Clarke</a></li>
+                <li><a href="http://localhost:3030/hamilton">Hamilton</a></li>
+                <li><a href="http://localhost:3030/hopper">Hopper</a></li>
+                <li><a href="http://localhost:3030/lovelace">Lovelace</a></li>
+                <li><a href="http://localhost:3030/turing">Turing</a></li>
         </ul>
-    </nav>
+
+        </nav>
+        
+    </div>
+  
 </body>
 </html>
 
-
+<!--<ul type = "square">
+    <option><a href="http://localhost:3030/babbage">Babbage</a>>
+    <option><a href="http://localhost:3030/berners-lee">Berners lee</a>>
+    <li><a href="http://localhost:3030/clarke">Clarke</a></li>
+    <li><a href="http://localhost:3030/hamilton">Hamilton</a></li>
+    <li><a href="http://localhost:3030/hopper">Hopper</a></li>
+    <li><a href="http://localhost:3030/lovelace">Lovelace</a></li>
+    <li><a href="http://localhost:3030/turing">Turing</a></li>
+</ul>-->
 
 
